Page now scrolls to content on load, fixed viewport being too long, sections can now be re-opened, no touch highlight

--- a/themes/MinTouch.css
+++ b/themes/MinTouch.css
@@ -1,3 +1,9 @@
+body{
+	user-select:none;
+	-webkit-user-select:none;
+	-webkit-touch-callout:none;
+	-webkit-touch-highlight-color:transparent;
+}
 [data-position=left]{
 	float:left;
 	clear:right;
